2013-04-19 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add new order type
	
2013-04-18 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Use Isotope library to masonry theme

2013-04-05 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Refactoring masonry JS
	
2013-04-04 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add configuration to view subcategories columns
	
2013-04-02 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add classes for categories filter with subcategories
	* Reorganize typoscript
	* Hook for add the possibility to order categories
	
2013-03-15 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* First version stable
	* Initial import

2013-03-12  Plan.Net France  <typo3@plan-net.fr>

	* Initial code generated with kickstarter