@@ -1,3 +1,7 @@
+2013-10-24 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Change request for return only default language record
+	* Fix order record
+
 2013-04-19 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
 	* Add new order type
 	
